--- a/src/app/users/components/user-form/user-form.component.html
+++ b/src/app/users/components/user-form/user-form.component.html
@@ -1,5 +1,6 @@
 <app-user-form-view
-  [user]="user$ | async"
+  [users]="users$ | async"
+  [userNamePreset]="userNamePreset"
   [roles]="roles"
   [employers]="employers$ | async"
   (formSubmitted)="onSubmit($event)">
