--- a/src/app/data-management/data-manager/data-manager.component.html
+++ b/src/app/data-management/data-manager/data-manager.component.html
@@ -5,7 +5,7 @@
     (tableSelected)="changeTable($event)">
   </app-data-table-picker>
 
-  <app-data-table fxLayout="column" fxLayoutGap="8px" class="h-100"
+  <app-data-table fxLayout="column" fxLayoutGap="8px" class="h-100" #dataTable
     [data]="data$ | async"
     (itemEdited)="editCell($event)"
     (createItem)="createItem()"
