--- a/src/app/shared-app/components/icon-button/icon-button.component.html
+++ b/src/app/shared-app/components/icon-button/icon-button.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="config">
-    <button mat-icon-button *ifRole="config.allowedRoles"
+    <button mat-button class="mat-icon-button" *ifRole="config.allowedRoles"
         [attr.aria-label]="config.aria"
         [ngClass]="[
             config.colorClass ? config.colorClass : '', 
