--- a/src/app/shared-app/components/app-button/app-button.component.html
+++ b/src/app/shared-app/components/app-button/app-button.component.html
@@ -3,13 +3,14 @@
         [attr.aria-label]="config.aria"
         [ngClass]="[
             getButtonClass(config.type) || '',
-            config.colorClass ? config.colorClass : 'bg-accent', 
+            config.colorClass ? config.colorClass : '', 
             config.iconSizeClass ? config.iconSizeClass : ''
         ]"
         (click)="handleFn(config.callback)">
 
         <mat-icon *ngIf="config.icon">{{ config.icon }}</mat-icon>
-        <mat-icon *ngIf="config.svgIcon" [svgIcon]="config.svgIcon"></mat-icon>      
+        <mat-icon *ngIf="config.svgIcon" [svgIcon]="config.svgIcon"></mat-icon> 
+        {{ config.text }}     
     </button>
 </ng-container>
 
