--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -32,10 +32,12 @@
       <router-outlet #outlet="outlet"></router-outlet>
     </div>
 
-    <div style="position:absolute;right:0;" class="m-1" 
+    <div style="position:absolute;right:0;" class="m-2" 
       fxLayout="column" fxLayoutGap="4px"
       [style.bottom.px]="bottomNav.element.nativeElement.offsetHeight">  
-      <app-button *ngFor="let fab of config.fabs | transformButtons : ButtonTypes.Fab | reverseArray" [config]="fab"></app-button>
+      <app-button class="fadeInRight" 
+        *ngFor="let fab of config.fabs | transformButtons : ButtonTypes.Fab | reverseArray; trackBy: trackByFab" 
+        [config]="fab"></app-button>
     </div>
 
     <app-main-bottom-nav #bottomNav fxHide fxShow.xs class="flex-nav"></app-main-bottom-nav>
