app button small fix + buttonclass getter

--- a/src/app/shared-app/components/app-button/app-button.component.html
+++ b/src/app/shared-app/components/app-button/app-button.component.html
@@ -1,8 +1,8 @@
 <ng-container *ngIf="config">
-    <button mat-button class="{{ getButtonClass() }}" *ifRole="config.allowedRoles"
+    <button mat-button *ifRole="config.allowedRoles"
         [attr.aria-label]="config.aria"
         [ngClass]="[
-            getButtonClass(config.type) || '',
+            buttonClass,
             config.colorClass ? config.colorClass : '', 
             config.iconSizeClass ? config.iconSizeClass : ''
         ]"
