cleanup app forms, add abstract components

--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
@@ -3,7 +3,7 @@
         <cdk-virtual-scroll-viewport *ngIf="timesheets?.length else noContent" itemSize="148" maxBufferPx="800" minBufferPx="800" fxFlex class="fadeInRight">
             <div class="m-1" *cdkVirtualFor="let timesheet of timesheets">
                 <app-timesheet-card [timesheet]="timesheet" (deleteClicked)="deleteTimesheet($event)"
-                    (editClicked)="openTimesheetForm(undefined, $event)">
+                    (editClicked)="openTimesheetForm({timesheetId: $event})">
                 </app-timesheet-card>
             </div>
         </cdk-virtual-scroll-viewport>
