remove mission list searchbar and sorting

--- a/src/app/mission-modules/mission-list/mission-list/mission-list-view/mission-list-view.component.html
+++ b/src/app/mission-modules/mission-list/mission-list/mission-list-view/mission-list-view.component.html
@@ -1,14 +1,10 @@
 <div class="h-100 pl-2 pr-2 max-width" style="overflow:hidden" fxLayout="column" fxLayoutAlign="start stretch">
      
-    <input appInputListener (inputChanged)="onSearch($event)"
-        placeholder="Søk med adresse eller id" [value]="searchInput || ''" class="mt-2 mb-2 p-2 pl-3 mat-elevation-z2 fadeInDown"
-        style="background:white;border:none;border-radius:10px;"> 
-
-    <p *ngIf="missions == undefined || missions.length == 0" class="m-2">Fant ingen oppdrag</p>
+    <p *ngIf="!missions || missions.length == 0" class="m-2">Fant ingen oppdrag</p>
 
     <cdk-virtual-scroll-viewport itemSize="60" maxBufferPx="800" minBufferPx="800" fxFlex>
         <app-list-card *cdkVirtualFor="let mission of missions; trackBy: trackByFn;" 
-            [config]="{startIcon:'home_work', endIcon: mission.finished ? 'check':'chevron_right'}" 
+            [config]="{startIcon:'home_work', endIcon: mission.finished ? 'check':'chevron_right', panelClass: 'mt-1'}" 
             [routerLink]="['/oppdrag', mission.id, 'detaljer']">{{'(' + mission.id + ') ' + mission.address}}
         </app-list-card>
     </cdk-virtual-scroll-viewport>
