--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -32,7 +32,7 @@
       <router-outlet #outlet="outlet"></router-outlet>
     </div>
 
-    <div style="position:absolute;right:0;" class="m-2" 
+    <div style="position:absolute;right:0;" class="m-2" *ngIf="config.fabs && config.fabs.length > 0"
       fxLayout="column" fxLayoutGap="4px"
       [style.bottom.px]="bottomNav.element.nativeElement.offsetHeight">  
       <app-button class="fadeInRight" 
