--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -20,8 +20,7 @@
     </app-detail-top-nav>
 
     <ng-template #defaultNav>
-      <app-main-top-nav class="flex-nav bg-primary" 
-        [ngClass]="config.topDefaultNavConfig?.elevationDisabled ? '' : 'mat-elevation-z4'"
+      <app-main-top-nav #navBar class="flex-nav" 
         [config]="config.topDefaultNavConfig" [currentUserRole]="config?.currentUser?.role" 
         (menuBtnClicked)="toggleDrawer(config.isXs)" 
        ></app-main-top-nav>
