--- a/src/app/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
+++ b/src/app/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
@@ -1,16 +1,26 @@
 <div class="p-2 max-width" *ngIf="details">
 
   <div fxLayout="row" fxLayoutGap="8px" class="mat-subheading-2 mb-2">
-    <a href="tel:{{ details.mission?.phoneNumber }}" class="mat-elevation-z2 bg-foreground text-center p-6" fxFlex="50"
-      matRipple>
+    
+    <a *ngIf="details.mission?.phoneNumber else noPhone" class="mat-elevation-z2 bg-foreground text-center p-6" fxFlex="50"
+      href="tel:{{ details.mission?.phoneNumber }}"  matRipple>
       <mat-icon class="scale-150 mb-1">phone</mat-icon><br />
       <span>{{ details.mission?.phoneNumber || 'N/A' }} </span>
     </a>
+
+    <ng-template #noPhone>
+      <span class="mat-elevation-z2 bg-foreground text-center p-6" fxFlex="50">
+        <mat-icon class="scale-150 mb-1">phone</mat-icon><br />
+        <span>{{ details.mission?.phoneNumber || 'N/A' }} </span>
+      </span>
+    </ng-template>
+
     <a href="https://www.google.com/maps/dir/?api=1&destination={{ details.mission?.address }}&travelmode=driving"
       target="_blank" class="mat-elevation-z2 bg-foreground text-center p-6" fxFlex="50" matRipple>
       <mat-icon class="scale-150">directions_car</mat-icon><br />
       <span>Veibeskrivelse</span>
     </a>
+    
   </div>
 
   <app-list-card [config]="{startIcon:'photo_library', ellipsisDisabled: true}"  
