--- a/src/app/mission-modules/mission-list/mission-filter/mission-filter-view/mission-filter-view.component.html
+++ b/src/app/mission-modules/mission-list/mission-filter/mission-filter-view/mission-filter-view.component.html
@@ -1,13 +1,18 @@
-<div fxLayout="column" fxLayoutAlign="space-around stretch" *ngIf="filter">
+<form fxLayout="column" fxLayoutAlign="start stretch" *ngIf="filterForm" [formGroup]="filterForm">
 
     <mat-form-field>
-        <input matInput placeholder="Søk med adresse eller id" [(ngModel)]="filter.searchString" />
+        <input matInput placeholder="Søk med adresse eller id" formControlName="searchString" [matAutocomplete]="auto1">
+        <mat-autocomplete #auto1="matAutocomplete">
+          <mat-option *ngFor="let mission of config?.missions" [value]="mission.address">
+            ({{ mission.id }}) {{ mission.address }}
+          </mat-option>
+        </mat-autocomplete>
     </mat-form-field>
 
     <mat-form-field>
-        <mat-select [(ngModel)]="filter.employerId" placeholder="Velg oppdragsgiver">
+        <mat-select formControlName="employerId" placeholder="Velg oppdragsgiver">
             <mat-option>Ingen</mat-option>
-            <mat-option *ngFor="let employer of employers" [value]="employer.id">
+            <mat-option *ngFor="let employer of config?.employers" [value]="employer.id">
                 {{ employer.name }}
             </mat-option>
         </mat-select>
@@ -16,9 +21,9 @@
     <mat-divider></mat-divider>
 
     <mat-form-field>
-        <mat-select [(ngModel)]="filter.missionTypeId" placeholder="Velg oppdragstype">
+        <mat-select formControlName="missionTypeId" placeholder="Velg oppdragstype">
             <mat-option>Ingen</mat-option>
-            <mat-option *ngFor="let type of missionTypes" [value]="type.id">
+            <mat-option *ngFor="let type of config?.missionTypes" [value]="type.id">
                 {{ type.name }}
             </mat-option>
         </mat-select>
@@ -27,7 +32,7 @@
     <mat-divider></mat-divider>
 
     <label class="mat-caption mt-2">Velg status</label>
-    <mat-radio-group [(ngModel)]="filter.finished" color="primary" fxLayout="row" fxLayoutAlign="start center"
+    <mat-radio-group formControlName="finished" color="primary" fxLayout="row" fxLayoutAlign="start center"
         fxLayoutGap="8px" class="mb-2">
         <mat-radio-button [value]="false">
             Aktiv
@@ -36,15 +41,18 @@
             Ferdig
         </mat-radio-button>
     </mat-radio-group>
+
     <span class="mb-2"></span>
     <mat-divider></mat-divider>
     <span class="mb-2"></span>
 
-
     <span fxLayout="row" fxLayoutAlign="space-between center">
         <button mat-button color="warn" (click)="reset()">Nullstill</button>
-        <button mat-button color="primary" (click)="applyFilter()">Bruk</button>
+
+        <button mat-button color="primary" 
+            [disabled]="filterForm.invalid || filterForm.pristine"
+            (click)="onSubmit()">Bruk
+        </button>
     </span>
 
-
-</div>
+</form>
