add loading to missionbar & listcard

--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-view/timesheet-mission-bar/timesheet-mission-bar.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-view/timesheet-mission-bar/timesheet-mission-bar.component.html
@@ -1,13 +1,15 @@
-<div  *ngIf="timesheet" class="mission-bar mat-elevation-z1" fxLayout="column" fxLayoutAlign="center center" 
-    [ngClass]="{
-        'bg-accent-light': timesheet.status == 2, 
-        'bg-warn-light': timesheet.status == 0
-    }"
-    (click)="clickBar()" matRipple>
+<ng-container *ngIf="timesheet">
+    <div class="mission-bar mat-elevation-z1" fxLayout="column" fxLayoutAlign="center center" 
+        [appLoadingOverlay]="timesheet.tempId"
+        [style.height.px]="(timesheet.totalHours / 14)*300"
+        [ngClass]="{
+            'bg-accent-light': timesheet.status == 2, 
+            'bg-warn-light': timesheet.status == 0
+        }"
+        (click)="clickBar()" matRipple>
 
-    <span class="mat-body-strong">
-        {{ timesheet.totalHours }}t
-    </span>
-
-
-</div>
+        <span class="mat-body-strong">
+            {{ timesheet.totalHours }}t
+        </span>
+    </div>
+</ng-container>
